<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_rect_white_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_dialog_dec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:minHeight="60dp"
        android:text="title"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_videoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/create_videoName"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1px"-->
        <!--android:background="@color/blue_light" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:minWidth="150dp"
                android:text="@string/picker_cancel"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <!--<View-->
            <!--android:layout_width="1px"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@color/blue_light" />-->

            <Button
                android:id="@+id/btn_dialog_sure"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:minWidth="150dp"
                android:text="@string/picker_sure"
                android:textColor="@color/blue_light"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>